# anndata-oom

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmark/: OOM_PCA_SPEEDUP.md  README.md
benchmark/paper/: main.tex  main_nature.tex  numbers.tex  numbers_auto.tex  numbers_mixed.tex  references.bib  table_compat.tex  table_datasets.tex  table_headline.tex  table_mixed.tex
benchmark/results/: compat_oom_ts5k.json  ov-anndata-implicit__ts_10k.json  ov-anndata-implicit__ts_5k.json  ov-anndata-implicit__ts_epithelial.json  ov-anndata-implicit__ts_immune.json  ov-anndata-implicit__ts_stromal.json  ov-anndata-implicit__ts_vasculature.json  ov-anndata-mixed__ts_10k.json  ov-anndata-mixed__ts_5k.json  ov-anndata-mixed__ts_epithelial.json  ov-anndata-mixed__ts_stromal.json  ov-anndata-mixed__ts_vasculature.json  ov-anndata__ts_10k.json  ov-anndata__ts_5k.json  ov-anndata__ts_epithelial.json  ov-anndata__ts_stromal.json  ov-anndata__ts_vasculature.json  ov-oom-mixed__ts_10k.json  ov-oom-mixed__ts_1M.json  ov-oom-mixed__ts_5k.json  ov-oom-mixed__ts_epithelial.json  ov-oom-mixed__ts_immune.json  ov-oom-mixed__ts_stromal.json  ov-oom-mixed__ts_vasculature.json  ov-oom__ts_10k.json  ov-oom__ts_1M.json  ov-oom__ts_5k.json  ov-oom__ts_epithelial.json  ov-oom__ts_immune.json  ov-oom__ts_stromal.json  ov-oom__ts_vasculature.json  scanpy-backed__ts_10k.json  scanpy-backed__ts_5k.json  scanpy-backed__ts_epithelial.json  scanpy-backed__ts_stromal.json  scanpy-backed__ts_vasculature.json
benchmark/scripts/: bench.py  compat_matrix.py  concat_1M.py  fetch_data.sh  oom_pca_strategies.py  plot.py  run_all_bench.sh  run_full_bench.sh  run_mixed_bench.sh  subsample.py  test_implicit_scale.py
python/anndataoom/: __init__.py  _backed_array.py  _centered_sparse.py  _chunked_ops.py  _compat.py  _core.py  _repr.py
tests/: test_centered_sparse.py  test_chunked_correctness.py  test_chunked_perf.py  test_pca_accuracy.py  test_pearson_precompute.py
tutorials/: t_api_reference.ipynb  t_cellxgene_1M.ipynb
