[package]
name = "anndataoom"
version = "0.1.4"
edition = "2024"
rust-version = "1.88"
authors = ["omicverse contributors"]
description = "Out-of-memory AnnData — Rust extension for anndataoom Python package"
license = "MIT"
repository = "https://github.com/Starlitnightly/anndata-oom"
readme = "README.md"

[lib]
name = "_backend"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module", "pyanndata/extension-module"]

# We pin to a specific commit of scverse/anndata-rs for reproducible builds.
# This is the same commit that snapatac2 currently uses.
[dependencies]
# Starlitnightly/anndata-rs fork, pinned to a commit that fixes the
# `to_select_info` panic on non-tuple single-axis subscripts — necessary
# for fast `PyArrayElem[a:b]` slice reads used by anndataoom's
# run-grouped subset path. Swap back to the upstream scverse rev once
# the patch is merged there.
pyanndata = { git = "https://github.com/Starlitnightly/anndata-rs", branch = "main" }
pyo3-log = "0.13"

[dependencies.pyo3]
version = "0.27"
features = ["multiple-pymethods"]
