[package]
name = "anndataoom"
version = "0.1.8"
edition = "2024"
rust-version = "1.88"
authors = ["omicverse contributors"]
description = "Out-of-memory AnnData — Rust extension for anndataoom Python package"
license = "MIT"
repository = "https://github.com/Starlitnightly/anndata-oom"
readme = "README.md"

[lib]
name = "_backend"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module", "pyanndata/extension-module"]

[dependencies]
# Vendored copy of the Starlitnightly/anndata-rs fork (rev aa15c8d), now
# maintained in-tree under vendor/anndata-rs/ instead of pulled as a git
# dependency. The fork carries the `to_select_info` fix for non-tuple
# single-axis subscripts (fast `PyArrayElem[a:b]` slice reads used by
# anndataoom's run-grouped subset path). Vendoring also lets us gate the
# HDF5 `threadsafe` feature off on Windows (see
# vendor/anndata-rs/anndata-hdf5/Cargo.toml) so the vendored static HDF5
# build succeeds there.
pyanndata = { path = "vendor/anndata-rs/pyanndata" }
pyo3-log = "0.13"

[dependencies.pyo3]
version = "0.27"
features = ["multiple-pymethods"]
